# iRobotP1

./: README.md  p1_world  turtlemimic.launch
catkin_ws/devel/: .catkin
catkin_ws/devel/include/beginner_tutorials/: Message1.h
catkin_ws/devel/include/openni2_camera/: OpenNI2Config.h
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
catkin_ws/devel/lib/kobuki_keyop/: keyop
catkin_ws/devel/lib/openni2_camera/: openni2_camera_node
catkin_ws/devel/lib/pkgconfig/: kobuki_capabilities.pc  kobuki_controller_tutorial.pc  kobuki_dashboard.pc  kobuki_msgs.pc  kobuki_random_walker.pc  kobuki_rapps.pc  kobuki_rviz_launchers.pc  rgbd_launch.pc  turtlebot_bringup.pc  turtlebot_calibration.pc  turtlebot_capabilities.pc  turtlebot_dashboard.pc  turtlebot_follower.pc  turtlebot_gazebo.pc  turtlebot_rviz_launchers.pc  turtlebot_stdr.pc  turtlebot_teleop.pc  yocs_cmd_vel_mux.pc  yocs_controllers.pc
catkin_ws/devel/lib/robot_pose_ekf/: test_robot_pose_ekf_zero_covariance
catkin_ws/devel/lib/turtlebot_actions/: find_fiducial_pose
catkin_ws/devel/lib/turtlebot_interactive_markers/: turtlebot_marker_server
catkin_ws/devel/lib/turtlebot_navigation/: laser_footprint_filter
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/kobuki_bumper2pc/cmake/: kobuki_bumper2pcConfig.cmake
catkin_ws/devel/share/kobuki_capabilities/cmake/: kobuki_capabilitiesConfig.cmake
catkin_ws/devel/share/kobuki_controller_tutorial/cmake/: kobuki_controller_tutorialConfig.cmake
catkin_ws/devel/share/kobuki_keyop/cmake/: kobuki_keyopConfig.cmake
catkin_ws/devel/share/kobuki_msgs/cmake/: kobuki_msgs-msg-extras.cmake  kobuki_msgs-msg-paths.cmake
catkin_ws/devel/share/kobuki_random_walker/cmake/: kobuki_random_walkerConfig.cmake
catkin_ws/devel/share/kobuki_rviz_launchers/cmake/: kobuki_rviz_launchersConfig.cmake
catkin_ws/devel/share/rgbd_launch/cmake/: rgbd_launchConfig.cmake
catkin_ws/devel/share/robot_pose_ekf/cmake/: robot_pose_ekf-msg-extras.cmake
catkin_ws/devel/share/turtlebot_actions/cmake/: turtlebot_actionsConfig.cmake
catkin_ws/devel/share/turtlebot_calibration/cmake/: turtlebot_calibration-msg-extras.cmake  turtlebot_calibrationConfig.cmake
catkin_ws/devel/share/turtlebot_description/cmake/: turtlebot_descriptionConfig.cmake
catkin_ws/devel/share/turtlebot_follower/cmake/: turtlebot_followerConfig.cmake
catkin_ws/devel/share/turtlebot_gazebo/cmake/: turtlebot_gazeboConfig.cmake
catkin_ws/devel/share/turtlebot_msgs/cmake/: turtlebot_msgsConfig.cmake
catkin_ws/src/: p1.py.save
catkin_ws/src/beginner_tutorials/: package.xml.save
catkin_ws/src/beginner_tutorials/also/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/devel/: env.sh  setup.sh  setup.zsh
devel/: local_setup.sh  setup.sh
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server
devel/lib/openni2_camera/: list_devices  test_wrapper
devel/lib/pkgconfig/: beginner_tutorials.pc  depthimage_to_laserscan.pc  kobuki_auto_docking.pc  kobuki_bumper2pc.pc  kobuki_description.pc  kobuki_gazebo.pc  kobuki_gazebo_plugins.pc  kobuki_keyop.pc  kobuki_node.pc  kobuki_safety_controller.pc  kobuki_testsuite.pc  openni2_camera.pc  openni2_launch.pc  reactive_turtlebot.pc  robot_pose_ekf.pc  turtlebot_actions.pc  turtlebot_description.pc  turtlebot_interactive_markers.pc  turtlebot_msgs.pc  turtlebot_navigation.pc  turtlebot_rapps.pc  turtlebot_stage.pc
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf
devel/lib/turtlebot_actions/: turtlebot_move_action_server
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake
devel/share/depthimage_to_laserscan/cmake/: depthimage_to_laserscanConfig.cmake
devel/share/kobuki_auto_docking/cmake/: kobuki_auto_dockingConfig.cmake
devel/share/kobuki_dashboard/cmake/: kobuki_dashboardConfig.cmake
devel/share/kobuki_description/cmake/: kobuki_descriptionConfig.cmake
devel/share/kobuki_gazebo/cmake/: kobuki_gazeboConfig.cmake
devel/share/kobuki_gazebo_plugins/cmake/: kobuki_gazebo_pluginsConfig.cmake
devel/share/kobuki_msgs/cmake/: kobuki_msgsConfig.cmake
devel/share/kobuki_node/cmake/: kobuki_nodeConfig.cmake
devel/share/kobuki_rapps/cmake/: kobuki_rappsConfig.cmake
devel/share/kobuki_safety_controller/cmake/: kobuki_safety_controllerConfig.cmake
devel/share/kobuki_testsuite/cmake/: kobuki_testsuiteConfig.cmake
devel/share/openni2_camera/cmake/: openni2_cameraConfig.cmake
devel/share/openni2_launch/cmake/: openni2_launchConfig.cmake
devel/share/reactive_turtlebot/cmake/: reactive_turtlebotConfig.cmake
devel/share/robot_pose_ekf/cmake/: robot_pose_ekfConfig.cmake
devel/share/turtlebot_actions/cmake/: turtlebot_actions-msg-extras.cmake  turtlebot_actions-msg-paths.cmake
devel/share/turtlebot_bringup/cmake/: turtlebot_bringupConfig.cmake
devel/share/turtlebot_calibration/cmake/: turtlebot_calibration-msg-paths.cmake
devel/share/turtlebot_capabilities/cmake/: turtlebot_capabilitiesConfig.cmake
devel/share/turtlebot_dashboard/cmake/: turtlebot_dashboardConfig.cmake
devel/share/turtlebot_interactive_markers/cmake/: turtlebot_interactive_markersConfig.cmake
devel/share/turtlebot_msgs/cmake/: turtlebot_msgs-msg-extras.cmake  turtlebot_msgs-msg-paths.cmake
devel/share/turtlebot_stdr/cmake/: turtlebot_stdrConfig.cmake
devel/share/turtlebot_teleop/cmake/: turtlebot_teleopConfig.cmake
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/devel/: _setup_util.py  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/requires/: CMakeLists.txt  package.xml
src/reactive_turtlebot/: CMakeLists.txt  package.xml
src/reactive_turtlebot/launch/: project1.launch
src/reactive_turtlebot/models/room_hall/: model.config  model.sdf
src/reactive_turtlebot/worlds/: package.xml  room_hall.world
(+35 files in other folders)
