<?xml version="1.0"?>
<package format="2">
  <name>requires</name>
  <version>0.0.0</version>
  <description>The requires package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lee0436@todo.todo">lee0436</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/requires</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>a</build_depend>
  <build_depend>and</build_depend>
  <build_depend>dependencies</build_depend>
  <build_depend>depends:</build_depend>
  <build_depend>give</build_depend>
  <build_depend>it</build_depend>
  <build_depend>list</build_depend>
  <build_depend>of</build_depend>
  <build_depend>on</build_depend>
  <build_depend>optionally</build_depend>
  <build_depend>package</build_depend>
  <build_depend>package_name</build_depend>
  <build_depend>that</build_depend>
  <build_depend>which</build_depend>
  <build_depend>you</build_depend>
  <build_export_depend>a</build_export_depend>
  <build_export_depend>and</build_export_depend>
  <build_export_depend>dependencies</build_export_depend>
  <build_export_depend>depends:</build_export_depend>
  <build_export_depend>give</build_export_depend>
  <build_export_depend>it</build_export_depend>
  <build_export_depend>list</build_export_depend>
  <build_export_depend>of</build_export_depend>
  <build_export_depend>on</build_export_depend>
  <build_export_depend>optionally</build_export_depend>
  <build_export_depend>package</build_export_depend>
  <build_export_depend>package_name</build_export_depend>
  <build_export_depend>that</build_export_depend>
  <build_export_depend>which</build_export_depend>
  <build_export_depend>you</build_export_depend>
  <exec_depend>a</exec_depend>
  <exec_depend>and</exec_depend>
  <exec_depend>dependencies</exec_depend>
  <exec_depend>depends:</exec_depend>
  <exec_depend>give</exec_depend>
  <exec_depend>it</exec_depend>
  <exec_depend>list</exec_depend>
  <exec_depend>of</exec_depend>
  <exec_depend>on</exec_depend>
  <exec_depend>optionally</exec_depend>
  <exec_depend>package</exec_depend>
  <exec_depend>package_name</exec_depend>
  <exec_depend>that</exec_depend>
  <exec_depend>which</exec_depend>
  <exec_depend>you</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
